2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,
        src/de/latlon/deejump/plugin/wfs/AbstractWFSWrapper.java:
		Showing only the correct geometry properties.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Sending srsName attribute with Queries - bug fix for the first selected feature type.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,
        src/de/latlon/deejump/plugin/wfs/TransactionFactory.java:
        Fixed handling of date fields.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,
        src/de/latlon/deejump/plugin/wfs/WFSPlugIn.java,
        src/de/latlon/deejump/plugin/wfs/AbstractWFSWrapper.java:
        Added handling of empty feature types. This may be useful for transactions.

2007-10-17  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Changing the version will automatically select the correct default format.

2007-10-17  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSOptionsPanel2.java:
		Fixed behaviour of the output format drop down box.

2007-10-17  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Sending srsName attribute with Queries.

2007-10-16  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/TransactionFactory.java,
        src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Fixed srs parameter of transaction requests.

2007-10-12  Andreas Schmitz <schmitz@lat-lon.de>
		build.xml:
		Set source and target options to 1.5.

2007-10-12  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Feature type list is now sorted.

2007-09-06  Andreas Schmitz <schmitz@lat-lon.de>
        lib/deegree2.jar: